change html/body height to 100% to fix vh issue on mobile

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,10 +9,13 @@ $grey-green: #A8B7AB;
 * {
   box-sizing: border-box;
 }
+
+html, body {
+  height: 100%;
+}
 body {
   margin: 0;
   padding: 0;
-  height: 100vh;
   font-family: 'Archivo', sans-serif;
   background-color: $background-color;
 }
